# MKIR

./: README.md  indexing.ml  indexing_copy.ml
_build/: log
indexer/: .env.ml.swp  .indexing.ml.swp  .indexing.mli.swp  dune-project  indexer.opam  indexing.mli  output  test.dk
indexer/_build/: .db  .digest-db  log
indexer/_build/.aliases/default/: all-00000000000000000000000000000000
indexer/_build/.aliases/default/lib/: all-00000000000000000000000000000000
indexer/_build/.aliases/default/test/: all-00000000000000000000000000000000
indexer/_build/default/: dune-project  env.ml  indexer.dune-package  indexer.install  indexer.opam
indexer/_build/default/.dune/: configurator  configurator.v2
indexer/_build/default/lib/: dune  indexer.cma  indexer.cmxa  indexer.cmxs
indexer/_build/default/lib/.indexer.objs/byte/: indexer.cmi  indexer.cmo  indexer.cmt
indexer/_build/default/lib/.indexer.objs/native/: indexer.cmx
indexer/_build/default/lib/.merlin-conf/: lib-indexer
indexer/_build/default/test/: .merlin  indexer.bc
indexer/_build/default/test/.indexer.eobjs/: indexer.ml.d
indexer/_build/default/test/.indexer.eobjs/byte/: dune__exe__Indexer.cmi  dune__exe__Indexer.cmo  dune__exe__Indexer.cmt  dune__exe__Indexer.cmti
indexer/_build/default/test/.indexer.eobjs/native/: dune__exe__Indexer.cmx
indexer/_build/default/test/.merlin-conf/: exe-indexer
indexer/_build/install/default/lib/indexer/: META  dune-package  opam
indexer/lib/: .merlin
indexer/test/: dune
