(lang dune 2.7)

(name indexer)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Leon Pirazzoli")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name indexer)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune dedukti.2.7)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
